User data, creation with cookie helping nt finished problem of method undefined

--- a/app/views/guests/stats.html.erb
+++ b/app/views/guests/stats.html.erb
@@ -1,5 +1,5 @@
 <h1>Pages#stats</h1>
 
-<%= link_to 'Suprimer mes stats', reset_guest_path,
+<%= link_to 'Suprimer mes stats', reset_guest_path(@guests),
   method: :delete,
   data: { confirm: 'Are You sure?' } %>
