--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$red: #DE8971;
+$blue: #A7D0CD;
+$yellow: #FFBA5A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #B4E197;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$beige: #FBEED7;
