Ajout des routes pour les modes de jeux

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "Solo", game_sessions_create_path %>
+<div><%= link_to "Solo",  solo_path %></div>
+<div><%= link_to "Playlist (5 chansons)",  playlist_path %></div>
 <br>
-
