--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <%# warper %>
 <div class="container">
 
@@ -11,23 +10,24 @@
 <%# h6 & BUTTON%>
 <div class="container text-center mt-5">
   <h6 class="mt-5">Choisissez votre mode de jeu</h6>
-  <%= link_to "Solo", game_sessions_create_path, class: "btn d-block btn-primary btn-lg mb-5" %>
-  <%= simple_form_for(@game_session) do |f| %>
-    <%= f.hidden_field :game %>
-    <%= f.submit "Playlist Mode", class: "btn d-block btn-primary w-100 btn-lg mb-5" %>
-  <% end %>
+  <%= link_to "1 CHANSON", game_sessions_create_path, class: "btn d-block btn-primary btn-lg mb-5" %>
 </div>
 
   <%# small button %>
   <div class="container text-center fixed-bottom">
-    <%= link_to rules_path, class: "btn btn-warning mb-4" do %>
-      <i class="fa-light fa-book-sparkles"></i>
+
+    <%= link_to rules_path, class: "btn btn-warning mb-4 text-center" do %>
+      <i class="fas fa-book-spells"></i>
     <% end %>
 
-    <%= link_to "Stats", game_sessions_create_path, class: "btn btn-warning mb-4" %>
+    <% if guest_present? %>
+      <%= link_to stats_guest_path(current_guest), class: "btn btn-warning mb-4" do %>
+      <i class="fas fa-book-spells"></i>
+      <% end %>
+    <% end %>
 
       <%= link_to faq_path, class: "btn btn-warning mb-4" do %>
-      <i class="fa-light fa-book-sparkles"></i>
-    <% end %>
+        <i class="fas fa-book-spells"></i>
+      <% end %>
   </div>
 </div>
