--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,16 +7,13 @@
   <h1 class="mt-5 mb-5">Trouvez un slogan sympa</h1>
 </div>
 
-<%# h6 & BUTTON%>
+<%# h6 & BUTTONS%>
 <div class="container text-center mt-5">
   <h6 class="mt-5">Choisissez votre mode de jeu</h6>
   <%= link_to "1 CHANSON", solo_path, class: "btn d-block btn-primary btn-lg mb-5" %>
+  <%= link_to "5 CHANSONs", playlist_path, class: "btn d-block btn-primary btn-lg mb-5" %>
 </div>
 
-<div class="container text-center mt-5">
-  <h6 class="mt-5">Choisissez votre mode de jeu</h6>
-  <%= link_to "1 CHANSON", playlist_path, class: "btn d-block btn-primary btn-lg mb-5" %>
-</div>
 
   <%# small button %>
   <div class="container text-center fixed-bottom">
