--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<div><%= link_to "Solo",  solo_path %></div>
-<div><%= link_to "Playlist (5 chansons)",  playlist_path %></div>
-<br>
+<div><%= link_to "Solo",  game_game_sessions_path(:game_id => @solo), method: :post %></div>
+<div><%= link_to "Playlist (5 chansons)",  game_game_sessions_path(:game_id => @playlist), method: :post %></div>
