--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,13 @@
-.navbar-lewagon {
+.container {
   justify-content: space-between;
-  background: white;
+  background: transparent;
+
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-songsalad .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-songsalad .navbar-brand img {
+  width: 50%;
 }
