--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 <div class="container text-center mt-5">
   <h6 class="mt-5">Choisissez votre mode de jeu</h6>
   <%= link_to "1 CHANSON", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
-  <%= link_to "5 CHANSONs", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
+  <%# <%= link_to "5 CHANSONs", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %> %>
 </div>
 
 
