--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,3 +3,10 @@ body {
   background-color: #FBEED7;
 }
 
+.mode-de-jeu {
+  margin-top: 5rem !important;
+}
+
+.small-btn-home {
+  margin-top: 5rem !important;
+}
