--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,8 @@
 .container {
-  justify-content: space-between;
   background: transparent;
-
 }
 
-.navbar-songsalad .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-songsalad .navbar-brand img {
+.logo-nvb img {
   width: 50%;
+  margin-top: 10px;
 }
