Correction de l'url du logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <%# Logo & H1 %>
 <div class="container text-center mb-5">
-  <img class="img-fluid mb-5" src="/assets/logo-smile.png" alt="song salad logo smile" width="270" height="270">
+  <img class="img-fluid mb-5" src="../../assets/logo-smile.png" alt="song salad logo smile" width="270" height="270">
   <h1 class="mt-5 mb-5">Trouvez un slogan sympa</h1>
 </div>
 
