la couleur bleu vert menthe

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,6 +1,10 @@
+<head>
+<link rel="stylesheet" type="text/css" href="_faq.scss"  />
+</head>
+<div  class=pagequestion>
 <h1> Foire Aux Questions </h1>
 
-<div>
+<div class="container-bubble">
   <b>Où sont mes scores ?</b>
   <br>
   <P> Dans l’ecran de la fin de partie et dans l’écran stats
@@ -11,7 +15,7 @@
   </P>
 </div>
 
-<div>
+<div class="container-bubble">
    <b>Qui a fait Song Salad ?</b>
    <br>
   <p>
@@ -35,22 +39,23 @@
 </div>
 
 
-<div>
+<div class="container-bubble">
   <b>Je peux voir la chanson d’hier ?</b>
   <br>
   <p>Fallait être là hier ! (...mais si t’insistes)</p>
 </div>
 
-<div>
+<div class="container-bubble">
 <b>Quand se joue la nouvelle chanson ?</b>
   <br>
 <p> Minuit heure de Paris /(heure UTC)</p>
 </div>
 
-<div>
+<div class="container-bubble">
   <b>D’ou viennent les textes ?</b>
   <br>
   <p>De notre goût pour la bonne chanson Française
   <br>
   et d’un algorythme scannant les paroles.</p>
+</div>
 </div>
