--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -1,15 +1,17 @@
 
 <h1>Règles Du Jeu</h1>
 
-<div>
+<div class='regles'>
+
+<div class="container-bubble">
   <P>Tente de trouver le titre de la chanson du jour</P>
 </div>
 
-<div>
+<div class="container-bubble">
   <p>Rentre un mot et vois si il apparait dans les paroles</p>
 </div>
 
-<div>
+<div class="container-bubble">
   <p> Tu as autant d’essais que tu veux pour
   <br>
   trouver les paroles,
@@ -17,13 +19,14 @@
   puis le titre de la chanson</p>
 </div>
 
-<div>
+<div class="container-bubble" >
   <p> Si tu trouves le titre, tu gagnes !</p>
 </div>
 
 
-<div>
+<div class="container-bubble">
   <p> Il y a un mode avec une chanson et un mode playlist
   <br>
   avec 5 chanson pour les plus téméraire</p>
+</div>
 </div>
