--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,10 +7,13 @@
 }
 
 .btn-warning {
- 
   box-shadow: 3px 3px #CCCCCC;
   display: grid;
   place-content: center;
   width: 2rem;
   height: 2rem;
+}
+
+.btn-propal {
+  box-shadow: 0px 0px;
 }
