--- a/app/assets/stylesheets/pages/_rules.scss
+++ b/app/assets/stylesheets/pages/_rules.scss
@@ -1,8 +1,9 @@
 .container-bubble{
   background-color: #A7D0CD;
-  margin: 4%;
+  margin: auto;
   padding: 4%;
-  border-radius: 5%;
+  margin-bottom: 4%;
+  border-radius: 15px;
 }
 
 .regles{
