--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,10 +1,7 @@
-<head>
-<link rel="stylesheet" type="text/css" href="_faq.scss"  />
-</head>
-<div  class=pagequestion>
+<div  class="pagequestion container">
 <h1> Foire Aux Questions </h1>
 
-<div class="container-bubble">
+<div class="bubble">
   <b>Où sont mes scores ?</b>
   <br>
   <P> Dans l’ecran de la fin de partie et dans l’écran stats
@@ -15,7 +12,7 @@
   </P>
 </div>
 
-<div class="container-bubble">
+<div class="bubble">
    <b>Qui a fait Song Salad ?</b>
    <br>
   <p>
@@ -39,23 +36,24 @@
 </div>
 
 
-<div class="container-bubble">
+<div class="bubble">
   <b>Je peux voir la chanson d’hier ?</b>
   <br>
   <p>Fallait être là hier ! (...mais si t’insistes)</p>
 </div>
 
-<div class="container-bubble">
+<div class="bubble">
 <b>Quand se joue la nouvelle chanson ?</b>
   <br>
 <p> Minuit heure de Paris /(heure UTC)</p>
 </div>
 
-<div class="container-bubble">
+<div class="bubble">
   <b>D’ou viennent les textes ?</b>
   <br>
   <p>De notre goût pour la bonne chanson Française
   <br>
   et d’un algorythme scannant les paroles.</p>
 </div>
+
 </div>
