--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,11 +1,13 @@
-.container-bubble{
-  background-color: #A7D0CD;
-  margin: 4%;
-  padding: 4%;
-  border-radius: 5%;
-}
 
 .pagequestion{
 justify-content: flex-start;
 
+}
+
+.bubble{
+  background-color: #A7D0CD;
+  margin: auto;
+  padding: 4%;
+  margin-bottom: 4%;
+  border-radius: 15px;
 }
