--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -3,15 +3,15 @@
 
 <div class='regles'>
 
-<div class="container-bubble">
+<div class="bubble">
   <P>Tente de trouver le titre de la chanson du jour</P>
 </div>
 
-<div class="container-bubble">
+<div class="bubble">
   <p>Rentre un mot et vois si il apparait dans les paroles</p>
 </div>
 
-<div class="container-bubble">
+<div class="bubble">
   <p> Tu as autant d’essais que tu veux pour
   <br>
   trouver les paroles,
@@ -19,12 +19,12 @@
   puis le titre de la chanson</p>
 </div>
 
-<div class="container-bubble" >
+<div class="bubble" >
   <p> Si tu trouves le titre, tu gagnes !</p>
 </div>
 
 
-<div class="container-bubble">
+<div class="bubble">
   <p> Il y a un mode avec une chanson et un mode playlist
   <br>
   avec 5 chanson pour les plus téméraire</p>
