Navbar sticky and txt faq center on phone and left on laptop

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,8 @@
 .container {
-  background: transparent;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  background: #FBEED7;
 }
 
 .logo-nvb img {
