--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -2,19 +2,19 @@
 <h1> Foire Aux Questions </h1>
 
 <div class="bubble">
-  <b>Où sont mes scores ?</b>
+  <p class= "title"><strong>Où sont mes scores ?</strong></p>
   <br>
-  <P> Dans l’ecran de la fin de partie et dans l’écran stats
+  <p> Dans l’ecran de la fin de partie et dans l’écran stats
   <br>
   Vous pouvez utiliser ce lien pour supprimer vos
   <br>
   données .
-  </P>
+  </p>
 </div>
 
 <div class="bubble">
-   <b>Qui a fait Song Salad ?</b>
-   <br>
+  <p class= "title"><strong>Qui a fait Song Salad ?</strong></p>
+  <br>
   <p>
     On est une équipe d’apprentis sorciers du code,
     <br>
@@ -31,25 +31,25 @@
     <br>
     la chansonnette au bout de votre langue.
     <br>
-    Voici la '<'ul'>'TEAM !
+    Voici la <'ul'>TEAM !
   </p>
 </div>
 
 
 <div class="bubble">
-  <b>Je peux voir la chanson d’hier ?</b>
+  <p class= "title"><strong>Je peux voir la chanson d’hier ?</strong></p>
   <br>
   <p>Fallait être là hier ! (...mais si t’insistes)</p>
 </div>
 
 <div class="bubble">
-<b>Quand se joue la nouvelle chanson ?</b>
+<p class= "title"><strong>Quand se joue la nouvelle chanson ?</strong></p>
   <br>
-<p> Minuit heure de Paris /(heure UTC)</p>
+<p> Minuit heure de Paris</p>
 </div>
 
 <div class="bubble">
-  <b>D’ou viennent les textes ?</b>
+  <p class= "title"><strong>D’ou viennent les textes ?</strong></p>
   <br>
   <p>De notre goût pour la bonne chanson Française
   <br>
