--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,6 +1,7 @@
 
 .pagequestion{
 justify-content: flex-start;
+z-index: -1;
 
 }
 
@@ -11,3 +12,18 @@ justify-content: flex-start;
   margin-bottom: 4%;
   border-radius: 15px;
 }
+
+h1 {
+  text-align:center;
+}
+
+.title {
+  text-align:center;
+}
+@media (min-width: 800px) {
+
+  .title {
+    text-align:left;
+  }
+
+  }
