Ajout des fonts

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,6 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@100;300;400;700;900&family=Lato:wght@100;300;400;900&display=swap');
+@import url("https://use.typekit.net/ubu6rxr.css");
 
 // Define fonts for body and headers
 $body-font: "Arima Madurai";
@@ -15,3 +16,25 @@ $headers-secondary-font: "";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+
+
+$font-family: 'blockhead-dark-side', sans-serif;
+$font-weight: 400;
+$font-style: normal;
+
+
+$font-family: 'chelsea-market-open', sans-serif;
+$font-weight: 400;
+$font-style: normal;
+
+
+
+$font-family: 'ff-prater-block-web', sans-serif;
+$font-weight: 400;
+$font-style: normal;
+
+
+$font-family: 'sketchnote-square', sans-serif;
+$font-weight: 400;
+$font-style: normal;
