--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,17 @@
 // Specific CSS for your home-page
 body {
   background-color: #FBEED7;
+
 }
+.choix{
+  font-family: 'chelsea-market-open';
+}
+
 
 .mode-de-jeu {
   margin-top: 5rem !important;
+  font-family: 'sketchnote-square'
+
 }
 
 .small-btn-home {
