--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -4,17 +4,17 @@
 <div class="bubble">
   <b>Où sont mes scores ?</b>
   <br>
-  <P> Dans l’ecran de la fin de partie et dans l’écran stats
+  <p> Dans l’ecran de la fin de partie et dans l’écran stats
   <br>
   Vous pouvez utiliser ce lien pour supprimer vos
   <br>
   données .
-  </P>
+  </p>
 </div>
 
 <div class="bubble">
-   <b>Qui a fait Song Salad ?</b>
-   <br>
+  <b>Qui a fait Song Salad ?</b>
+  <br>
   <p>
     On est une équipe d’apprentis sorciers du code,
     <br>
