--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
 <%# h6 & BUTTONS%>
 <div class="mode-de-jeu container text-center mt-5">
-  <h4 class="mt-3 mb-4">Choisissez votre mode de jeu</h4>
+  <h4 class="mt-3 mb-4 choix" >Choisissez votre mode de jeu</h4>
   <%= link_to "1 CHANSON", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-4" %>
   <%= link_to "5 CHANSONS", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
 </div>
