wpa et retouches font

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,7 +10,7 @@ $body-bg:                 $light-gray;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $beige;
+$body-color: $gray;
 $primary:    $red;
 $success:    $green;
 $info:       $yellow;
