Rules screen bubble & navbar done

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,11 @@
-.container {
+.container-logo {
+
   position: sticky;
   z-index: 1;
   top: 0;
   background: #FBEED7;
 }
+
 
 .logo-nvb img {
   width: 50%;
