--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container-logo text-center">
 <%# Logo return home %>
     <%= link_to root_path, class: "logo-nvb d-flex justify-content-center align-item-center" do %>
       <%= image_tag "song salad title navbar.png" %>
