--- a/app/assets/stylesheets/components/_bubble.scss
+++ b/app/assets/stylesheets/components/_bubble.scss
@@ -7,7 +7,10 @@
 }
 
 .bubble-guess{
-  background-color: $green;
-  border-radius: 40px;
+  background-color: $blue;
+  border-radius: 10px;
+  margin-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 
 }
