--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,13 +3,13 @@
 <div class="container">
 
 
-<%# Logo & H1 %>
-<div class="container text-center mb-1 mt-3">
+<%# Logo %>
+<div class="container text-center mb-1 mt-5">
   <%= image_tag("logo-smile.png", width: 270, height: 270, :class => "img-fluid mb-1") %>
 </div>
 
 <%# h6 & BUTTONS%>
-<div class="mode-de-jeu container text-center mt-5">
+<div class="mode-de-jeu container text-center">
   <h4 class="mt-3 mb-4 choix">Choisissez votre mode de jeu</h4>
   <%= link_to "CHANSON DU JOUR", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-4" %>
   <%= link_to "PLAYLIST DU JOUR (x3)", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
