--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -77,11 +77,18 @@
     min-width: 30%;
     max-width: 100%;
     z-index: -1;
+    scroll-behavior: smooth !important;
+
+
 
     span{
     color: rgba(0, 0, 0, 0.368);
     }
 
+    span[id] {
+    color: rgb(0, 0, 0);
+    scroll-margin-top: 10em;
+    }
   }
 
   .formulaire {
