--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -105,6 +105,7 @@
   @media (min-width: 800px) {
     #show-game {
       display: flex;
+      max-height: 95vh;
     }
 
     .show{
@@ -113,7 +114,7 @@
       }
 
     .lyrics {
-      // max-height: 80vh;
+      max-height: 85vh;
       margin: 0;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
@@ -134,7 +135,7 @@
       max-height: 40vh;
       margin: 0;
       padding: 0;
-      width: 100%;
+      width: 40%;
       height: 6vh;
       position: sticky;
       bottom: 0;
