Liste des propositions réparée

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -48,7 +48,7 @@
     // max-height: 25vh;
     position: sticky;
     bottom: 0;
-    max-height: 8vh;
+    max-height: 60px;
   }
 
   .guess-list {
