--- a/app/views/guests/stats.html.erb
+++ b/app/views/guests/stats.html.erb
@@ -1,32 +1,61 @@
-<div class="container align-center d-flex flex-column">
-  <h1 class="mt-5 mb-5">Vos statistiques</h1>
+<div class="container stats">
+  <h1>Vos statistiques</h1>
 
   <%# carroussel %>
-  <div id="carouselExampleControls" class="carousel slide mt-5 mb-5" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="bubble-stat"></div>
-      </div>
-      <div class="carousel-item">
-        <div class="bubble-stat"></div>
-      </div>
-      <div class="carousel-item">
-        <div class="bubble-stat"></div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
+  <section class="carousel w-75" aria-label="Gallery">
+    <ol class="carousel__viewport">
+      <li id="carousel__slide1"
+          tabindex="0"
+          class="carousel__slide d-flex flex-column text-center">
+          <div class="mt-3 choix">PARTIES</div>
+          <div class="mt-5 stat-number choix">5</div>
+        <div class="carousel__snapper">
+          <a href="#carousel__slide4"
+            class="carousel__prev">Go to last slide</a>
+          <a href="#carousel__slide2"
+            class="carousel__next">Go to next slide</a>
+        </div>
+      </li>
+      <li id="carousel__slide2"
+          tabindex="0"
+          class="carousel__slide d-flex flex-column text-center">
+          <div class="mt-3 choix">VICTOIRES</div>
+          <div class="mt-5 stat-number choix">5</div>
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide1"
+          class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide3"
+          class="carousel__next">Go to next slide</a>
+      </li>
+      <li id="carousel__slide3"
+          tabindex="0"
+          class="carousel__slide d-flex flex-column text-center">
+          <div class="mt-3 choix">MEILLEURE SERIE</div>
+          <div class="mt-5 stat-number choix">5</div>
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide2"
+          class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide4"
+          class="carousel__next">Go to next slide</a>
+      </li>
+      <li id="carousel__slide4"
+          tabindex="0"
+          class="carousel__slide d-flex flex-column text-center">
+          <div class="mt-3 choix">MOYENNE D'ESSAI PAR PARTIE</div>
+          <div class="mt-5 stat-number choix">5</div>
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide3"
+          class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide1"
+          class="carousel__next">Go to first slide</a>
+      </li>
+    </ol>
+    <aside class="carousel__navigation">
+    </aside>
+  </section>
 
   <%# Logo %>
-  <div class="container text-center mb-1 mt-4">
+  <div class="container text-center">
     <%= image_tag("logo-smile.png", width: 270, height: 270, :class => "img-fluid mb-1") %>
   </div>
 </div>
