--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -12,15 +12,17 @@ z-index: -1;
   margin-bottom: 4%;
   border-radius: 15px;
 
-
 }
 
 h1 {
   text-align:center;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .title {
   text-align:center;
+  margin: 0;
 }
 @media (min-width: 800px) {
 
