--- a/app/assets/stylesheets/pages/_rules.scss
+++ b/app/assets/stylesheets/pages/_rules.scss
@@ -10,6 +10,11 @@
   padding: 0 2rem;
 }
 
+h1 {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 @media (min-width: 800px) {
   .regles {
     justify-content: flex-start;
