--- a/app/assets/stylesheets/pages/_stats.scss
+++ b/app/assets/stylesheets/pages/_stats.scss
@@ -11,3 +11,28 @@
 .stat-number {
   font-size: 20vw;
 }
+
+.stat-category {
+  font-size: 5vw;
+}
+
+@media (min-width: 800px) {
+  .stats {
+    display: flex;
+    max-height: 95vh;
+    justify-content: space-between;
+  }
+
+  .stat-number {
+    font-size: 10vw;
+  }
+
+  .stat-category {
+    font-size: 5vw;
+  }
+
+  h1 {
+    margin-top: 5%;
+  }
+
+}
