--- a/app/views/guests/stats.html.erb
+++ b/app/views/guests/stats.html.erb
@@ -2,57 +2,47 @@
   <h1>Vos statistiques</h1>
 
   <%# carroussel %>
-  <section class="carousel w-75" aria-label="Gallery">
-    <ol class="carousel__viewport">
-      <li id="carousel__slide1"
-          tabindex="0"
-          class="carousel__slide d-flex flex-column text-center">
-          <div class="mt-3 choix">PARTIES</div>
-          <div class="mt-5 stat-number choix">5</div>
-        <div class="carousel__snapper">
-          <a href="#carousel__slide4"
-            class="carousel__prev">Go to last slide</a>
-          <a href="#carousel__slide2"
-            class="carousel__next">Go to next slide</a>
+
+  <div id="carouselExampleInterval" class="carousel slide w-75" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <%# Slide %>
+      <div class="carousel-item active text-center bubble-stat-green" data-bs-interval="20000">
+        <div class="w-100">
+          <div class="mt-3 choix stat-category">PARTIES</div>
+          <div class="mt-5 stat-number choix">32</div>
         </div>
-      </li>
-      <li id="carousel__slide2"
-          tabindex="0"
-          class="carousel__slide d-flex flex-column text-center">
-          <div class="mt-3 choix">VICTOIRES</div>
+      </div>
+      <%# Slide %>
+      <div class="carousel-item text-center bubble-stat-blue" data-bs-interval="20000">
+        <div class="d-block w-100">
+          <div class="mt-3 choix stat-category">VICTOIRES</div>
+          <div class="mt-5 stat-number choix">9</div>
+        </div>
+      </div>
+      <%# Slide %>
+      <div class="carousel-item text-center bubble-stat-yellow" data-bs-interval="20000">
+        <div class="d-block w-100">
+          <div class="mt-3 choix stat-category">MEILLEURE SERIE</div>
+          <div class="mt-5 stat-number choix">2</div>
+        </div>
+      </div>
+      <%# Slide %>
+      <div class="carousel-item text-center bubble-stat-blue" data-bs-interval="20000">
+        <div class="d-block w-100">
+          <div class="mt-3 choix stat-category">MOYENNE D'ESSAI</div>
           <div class="mt-5 stat-number choix">5</div>
-        <div class="carousel__snapper"></div>
-        <a href="#carousel__slide1"
-          class="carousel__prev">Go to previous slide</a>
-        <a href="#carousel__slide3"
-          class="carousel__next">Go to next slide</a>
-      </li>
-      <li id="carousel__slide3"
-          tabindex="0"
-          class="carousel__slide d-flex flex-column text-center">
-          <div class="mt-3 choix">MEILLEURE SERIE</div>
-          <div class="mt-5 stat-number choix">5</div>
-        <div class="carousel__snapper"></div>
-        <a href="#carousel__slide2"
-          class="carousel__prev">Go to previous slide</a>
-        <a href="#carousel__slide4"
-          class="carousel__next">Go to next slide</a>
-      </li>
-      <li id="carousel__slide4"
-          tabindex="0"
-          class="carousel__slide d-flex flex-column text-center">
-          <div class="mt-3 choix">MOYENNE D'ESSAI PAR PARTIE</div>
-          <div class="mt-5 stat-number choix">5</div>
-        <div class="carousel__snapper"></div>
-        <a href="#carousel__slide3"
-          class="carousel__prev">Go to previous slide</a>
-        <a href="#carousel__slide1"
-          class="carousel__next">Go to first slide</a>
-      </li>
-    </ol>
-    <aside class="carousel__navigation">
-    </aside>
-  </section>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
   <%# Logo %>
   <div class="container text-center">
