--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,9 @@
 .btn {
-  border-radius: 5px;
+  border-radius: 5px
+
+    // .benjamin {
+
+    // }
 }
 
 .btn-primary {
@@ -14,8 +18,6 @@
   width: 2rem;
   height: 2rem;
 }
-
-
 
 @media (min-width: 800px) {
 
