--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,5 @@
-
 <%# warper %>
 <div class="container home">
-
 
 <%# Logo %>
 <div class="container text-center logo">
@@ -9,14 +7,14 @@
 </div>
 
 <%# h6 & BUTTONS%>
-<div class="mode-de-jeu container text-center">
+<div class="mode-de-jeu container text-center animate__animated animate__bounceInRight">
   <h4 class="mt-3 mb-4 choix">Choisissez votre mode de jeu</h4>
   <%= link_to "CHANSON DU JOUR", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-4" %>
   <%= link_to "PLAYLIST DU JOUR (x3)", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
 </div>
 
   <%# small button %>
-  <div class="small-btn-home">
+  <div class="small-btn-home animate__animated animate__bounceInRight">
 
     <%= link_to rules_path, class: "btn btn-warning text-center" do %>
       <i class="fas fa-book-open fa-1x"></i>
