--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,7 +1,7 @@
 <div  class="pagequestion container">
-<h1> Foire Aux Questions </h1>
+<h1 class="animate__animated animate__bounceInDown"> Foire Aux Questions </h1>
 
-<div class="bubble">
+<div class="bubble animate__animated animate__bounceInLeft">
   <p class= "title"><strong>Où sont mes scores ?</strong></p>
   <br>
   <p> Dans l’ecran de la fin de partie et dans l’écran stats
@@ -12,7 +12,7 @@
   </p>
 </div>
 
-<div class="bubble">
+<div class="bubble animate__animated animate__bounceInRight">
   <p class= "title"><strong>Qui a fait Song Salad ?</strong></p>
   <br>
   <p>
@@ -36,19 +36,19 @@
 </div>
 
 
-<div class="bubble">
+<div class="bubble animate__animated animate__bounceInLeft">
   <p class= "title"><strong>Je peux voir la chanson d’hier ?</strong></p>
   <br>
   <p>Fallait être là hier ! (...mais si t’insistes)</p>
 </div>
 
-<div class="bubble">
+<div class="bubble animate__animated animate__bounceInRight">
 <p class= "title"><strong>Quand se joue la nouvelle chanson ?</strong></p>
   <br>
 <p> Minuit heure de Paris</p>
 </div>
 
-<div class="bubble">
+<div class="bubble animate__animated animate__bounceInLeft">
   <p class= "title"><strong>D’ou viennent les textes ?</strong></p>
   <br>
   <p>De notre goût pour la bonne chanson Française
