--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -1,17 +1,17 @@
 
-<h1>Règles Du Jeu</h1>
+<h1 class="animate__animated animate__bounceInDown">Règles Du Jeu</h1>
 
 <div class="regles">
 
-  <div class="bubble">
+  <div class="bubble animate__animated animate__bounceInLeft">
     <P>Tente de trouver le titre de la chanson du jour</P>
   </div>
 
-  <div class="bubble">
+  <div class="bubble animate__animated animate__bounceInRight">
     <p>Rentre un mot et vois si il apparait dans les paroles</p>
   </div>
 
-  <div class="bubble">
+  <div class="bubble animate__animated animate__bounceInLeft">
     <p> Tu as autant d’essais que tu veux pour
     <br>
     trouver les paroles,
@@ -19,12 +19,12 @@
     puis le titre de la chanson</p>
   </div>
 
-  <div class="bubble" >
+  <div class="bubble animate__animated animate__bounceInRight" >
     <p> Si tu trouves le titre, tu gagnes !</p>
   </div>
 
 
-  <div class="bubble">
+  <div class="bubble animate__animated animate__bounceInLeft">
     <p> Il y a un mode avec une chanson et un mode playlist
     <br>
     avec 5 chanson pour les plus téméraire</p>
