Le dernier mot apparait bien en rouge

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <script src="confettis_controller.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
+
   </head>
 
   <body>
@@ -30,5 +31,9 @@
     <%= render 'shared/flashes' %>
 
     <%= yield %>
+
+  <script>
+    ScrollReveal().reveal('.word', { interval: 0.5, container: '.lyrics' } );
+  </script>
   </body>
 </html>
