comment jouer avec les amis

--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -29,4 +29,15 @@
     <br>
     avec 5 chanson pour les plus téméraire</p>
   </div>
+
+
+
+  <div class="bubble animate__animated animate__bounceInRight">
+    <p> Tu veux jouer avec tes amis ?
+    <br>
+        compares les scores en t'enregistrant
+    <br>
+    </p>
+    <button href= ''>ajouter un bouton social</button>
+  </div>
 </div>
