--- a/app/assets/stylesheets/pages/_stats.scss
+++ b/app/assets/stylesheets/pages/_stats.scss
@@ -2,37 +2,43 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around ;
   height: 90vh;
   align-items: center;
 
   }
 
 .stat-number {
-  font-size: 20vw;
+  font-size: 4em;
 }
 
 .stat-category {
-  font-size: 5vw;
+  font-size: 1.5em;
+}
+
+.delete-btn {
+  font-family: 'sketchnote-square'
 }
 
 @media (min-width: 800px) {
   .stats {
     display: flex;
     max-height: 95vh;
-    justify-content: space-between;
+
   }
 
   .stat-number {
-    font-size: 10vw;
+    font-size: 5em;
+    max-height: 25vh;
   }
 
   .stat-category {
-    font-size: 5vw;
+    font-size: 2.5em;
+    max-height: 25vh;
   }
 
   h1 {
     margin-top: 5%;
+    max-height: 25vh;
   }
 
 }
