--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,6 @@
 
     <%= yield %>
 
-  <script>
-    ScrollReveal().reveal('.word', { interval: 0.5, container: '.lyrics' } );
-  </script>
+    <script> ScrollReveal().reveal('.word', { interval: 0.5, container: '.lyrics' } ); </script>
   </body>
 </html>
