--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>Change your password</h2>
+<div class= "sign container">
+<h2>Changer votre mot de passe</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -8,20 +9,21 @@
 
   <div class="form-inputs">
     <%= f.input :password,
-                label: "New password",
+                label: "Nouveau mot de passe",
                 required: true,
                 autofocus: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
-                label: "Confirm your new password",
+                label: "Confirmez votre nouveau mot de passe",
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+  <div class="form-actions btn btn-primary">
+    <%= f.button :submit, "Changer mon mot de passe" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
